<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="3dp"
        app:cardCornerRadius="0dp"
        app:cardBackgroundColor="@color/card_back"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            >

            <ImageView
                android:id="@+id/img"
                android:layout_width="120dp"
                android:layout_height="140dp"
                android:src="@drawable/tent"
                />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/roboto_medium"
                    android:maxLines="2"
                    android:text="@string/event_title"
                    android:textColor="@color/font_card_col"
                    android:textSize="28sp" />


                <TextView

                    android:id="@+id/event_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:layout_alignLeft="@+id/name"
                    android:layout_alignParentBottom="true"
                    android:layout_alignStart="@+id/name"
                    android:drawableLeft="@drawable/ic_calendar"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_calendar"
                    android:text="@string/event_d"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/capacity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_above="@+id/event_date"
                    android:layout_alignLeft="@+id/event_date"
                    android:layout_alignStart="@+id/event_date"
                    android:drawableLeft="@drawable/ic_member"
                    android:drawablePadding="7dp"
                    android:drawableStart="@drawable/ic_member"
                    android:text="@string/members" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:drawableStart="@drawable/ic_rupee_indian"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="11dp"
                    android:layout_marginRight="11dp"
                    android:text="@string/rupee"
                    android:drawableLeft="@drawable/ic_rupee_indian" />
            </RelativeLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>